--- a/github_battle/package.json
+++ b/github_battle/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "babel-loader": "^6.2.5",
     "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
     "babel-preset-react": "^6.11.1",
     "html-webpack-plugin": "^2.22.0",
-    "webpack-dev-server": "^1.15.1",
-    "webpack": "^1.13.2",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-router": "^2.7.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
